--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,8 +2,12 @@
 <html>
 <head>
     <title>Hello SpringBoot</title>
+    <script src="js/index.js"></script>
+    <script src="js/demo_async.js"></script>
 </head>
 <body>
-Hello SpringBoot!
+<h1>Hello SpringBoot!</h1>
+<button onclick="callApi()">GET API 呼び出し</button>
+<pre id="result"></pre>
 </body>
 </html>
